Update API to version 0.3.0, adding bans endpoint
commit 891d9f395956abf737c4d3f9e0404c530fc0484d
Author: Terra <terra@mcterra.id.au>
Date:   Tue Oct 26 23:33:06 2021 +1100

    update API version


commit d28d1f73bc8920931c67dfba5737d6d947bfd99f
Author: Terra <terra@mcterra.id.au>
Date:   Tue Oct 26 23:31:40 2021 +1100

    fix a sneaky issue with boolean formatting


commit 5e70806214b9cb375711549c4ae6beffd208cc49
Author: Terra <terra@mcterra.id.au>
Date:   Tue Oct 26 23:27:20 2021 +1100

    painful but fixed


commit 6ffc8aa1acc125aec72ad213185be104a6b4e069
Author: Terra <terra@mcterra.id.au>
Date:   Tue Oct 26 23:23:37 2021 +1100

    that should do it


commit 30b7220ae7bb12952f0c0c4bcce1379ab22c512f
Author: Terra <terra@mcterra.id.au>
Date:   Tue Oct 26 23:20:04 2021 +1100

    should fix


commit 04d05590f4fce3f4cc1152eb7e8ae404754e7ae3
Author: Terra <terra@mcterra.id.au>
Date:   Tue Oct 26 23:15:44 2021 +1100

    test some things


commit 215e3b04a827a75f1dd5d8bb32f1a82006775260
Author: Terra <terra@mcterra.id.au>
Date:   Tue Oct 26 23:13:28 2021 +1100

    oh my god half of it is just docs


commit f3bcece55db22715261590d49d5eeb00132513d9
Author: Terra <terra@mcterra.id.au>
Date:   Tue Oct 26 22:22:58 2021 +1100

    facepalm


commit 8b9f7428ed3d698a6166b93af6a130bab3f2ef64
Author: Terra <terra@mcterra.id.au>
Date:   Tue Oct 26 22:19:58 2021 +1100

    coming now: making the ban api robust


commit b8a4a6987308775f95e9339be4655dff30a93daf
Author: Terra <terra@mcterra.id.au>
Date:   Tue Oct 26 14:01:36 2021 +1100

    me when all get params are strings


commit 1dead5364f5afee40ac625b1dff323568c86ba8f
Author: Terra <terra@mcterra.id.au>
Date:   Tue Oct 26 13:53:31 2021 +1100

    add the query back


commit c73eb1dc3eaa63b27f453066da0aaf1f62aa6743
Author: Terra <terra@mcterra.id.au>
Date:   Tue Oct 26 13:52:33 2021 +1100

    facades need app service provider, can't be assed


commit 8c622d16744713b547e5f0eaa20ee1a5aeed7d41
Merge: 1b47e40 01bb8d1
Author:
